1. Updated background color for whole page 2. Updated padding and margins between elements for spacing 3. Updated H1 - H5 css elements as stated in the instuctions. 4. Changed SELECTED WORK from header to normal text 5. Created a <div> with border-box sizing to contain it's children elements for the pictures with small circle icons. 5. Updated the .circle class in css to create the white circle borders 6. Prepared to add a section to contain all the pictures with small circle icons for larger media sizes. This was the stopping point and preparation for August 6th.

--- a/CSS/codeup_design.css
+++ b/CSS/codeup_design.css
@@ -12,8 +12,28 @@
     --red: #E6563B;
 }
 
-h1, h3, div>.text-white {
+h1, h2,  h3, h4, h5,  div>.text-white {
     font-family: 'Anton', sans-serif;
+}
+
+h1 {
+    font-size: 64px;
+}
+
+h2 {
+    font-size: 48px;
+}
+
+h3 {
+    font-size: 40px;
+}
+
+h4 {
+    font-size: 32px;
+}
+
+h5 {
+    font-size: 28px;
 }
 .logo {
     margin: 0 auto;
@@ -25,17 +45,20 @@ h1, h3, div>.text-white {
 }
 
 .bg-gray {
-    background-color: var(--grey-dark);
+    background-color: var(--grey-light);
 }
 
 .circle {
-    height: 105px;
-    width: 105px;
+    /*height: 105px;*/
+    /*width: 105px;*/
+    height: 175px;
+    width: 175px;
     -moz-border-radius: 50px;
     -webkit-border-radius: 50px;
     border-radius: 50%;
     text-align: center;
-    border-width: medium;
+    border: 10px solid white;
+    background-color: white;
     /*margin: 20px auto;*/
 }
 
@@ -72,5 +95,21 @@ h1, h3, div>.text-white {
     position: relative;
     top: 40%;
     bottom: 50%;
+}
+
+header {
+    height: 55px;
+}
+
+.image-border {
+    background-color: var(--grey-dark);
+    /*border: 10em;*/
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2%;
+}
+
+.border-box {
+    box-sizing: border-box;
 }
 
